--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,15 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  device_apps: ^1.0.9
+  animated_text_kit: ^2.0.1
+  google_fonts: ^1.0.0
+
+  launcher_assist:
+    path: lib/launcher-assist/
+
   flutter:
     sdk: flutter
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
